--- a/ui/Cargo.toml
+++ b/ui/Cargo.toml
@@ -7,6 +7,8 @@ edition.workspace = true
 
 [dependencies]
 egui = { version = "0.24.1", features = ["log"] }
+egui_extras = { version = "0.24.2", features = ["all_loaders"] }
+image = { version = "0.24.7", features = ["webp"] }
 eframe = "0.24.1"
 rfd = "0.12.1"
 bg3_lib.workspace = true
