--- a/bg3_lib/Cargo.toml
+++ b/bg3_lib/Cargo.toml
@@ -11,3 +11,4 @@ lz4_flex = "0.11.2"
 serde = { version = "1.0.195", features = ["derive"] }
 serde-big-array = "0.5.1"
 uuid = "1.6.1"
+zstd = "0.13.0"
