--- a/bg3_lib/Cargo.toml
+++ b/bg3_lib/Cargo.toml
@@ -8,7 +8,7 @@ edition.workspace = true
 bincode = "1.3.3"
 flate2 = "1.0.28"
 lz4_flex = "0.11.2"
-serde = { version = "1.0.195", features = ["derive"] }
+serde = { version = "1.0.196", features = ["derive"] }
 serde-big-array = "0.5.1"
-uuid = "1.6.1"
+uuid = { version = "1.7.0", features = ["serde"] }
 zstd = "0.13.0"
