--- a/ui/Cargo.toml
+++ b/ui/Cargo.toml
@@ -8,7 +8,7 @@ edition.workspace = true
 [dependencies]
 egui = { version = "0.26.2", features = ["log"] }
 egui_extras = { version = "0.26.2", features = ["all_loaders"] }
-image = { version = "0.24.8", features = ["webp"] }
-eframe = "0.26.2"
-rfd = "0.13.0"
+image = { version = "0.24.9", features = ["webp"] }
+eframe = { version = "0.26.2", features = ["wgpu"] }
+rfd = "0.14.0"
 bg3_lib.workspace = true
