--- a/ui/Cargo.toml
+++ b/ui/Cargo.toml
@@ -10,5 +10,5 @@ egui = { version = "0.27.2", features = ["log"] }
 egui_extras = { version = "0.27.2", features = ["all_loaders"] }
 image = { version = "0.25.1", features = ["webp"] }
 eframe = { version = "0.27.2", features = ["wgpu"] }
-rfd = "0.14.1"
+egui-file-dialog = "0.5.0"
 bg3_lib.workspace = true
