--- a/bg3_lib/Cargo.toml
+++ b/bg3_lib/Cargo.toml
@@ -5,10 +5,10 @@ authors.workspace = true
 edition.workspace = true
 
 [dependencies]
-bincode = "1.3.3"
-flate2 = "1.0.35"
-lz4_flex = "0.11.3"
-serde = { version = "1.0.218", features = ["derive"] }
+bincode = { version = "2.0.1", features = ["serde"] }
+flate2 = "1.1.2"
+lz4_flex = "0.11.5"
+serde = { version = "1.0.219", features = ["derive"] }
 serde-big-array = "0.5.1"
-uuid = { version = "1.13.2", features = ["serde"] }
-zstd = "0.13.2"
+uuid = { version = "1.17.0", features = ["serde"] }
+zstd = "0.13.3"
